# devops4DS

./: .Rprofile  .gitignore  Dockerfile  README.md  _publish.yml  _quarto.yml  app.R  data-load.R  docker-compose.yml  eda-basic.html  eda-basic.qmd  index.qmd  model-py.qmd  pyproject.toml  run_api.py  save_data_s3.R
.github/workflows/: publish-aws.yml  publish.yml
_freeze/eda-basic/execute-results/: html.json
_freeze/model-py/execute-results/: html.json
data/db/: my-db.duckdb
data/model/penguin_model/20251024T155434Z-d3de8/: data.txt  penguin_model.joblib
